--- a/sigurdurteiturVue/package.json
+++ b/sigurdurteiturVue/package.json
@@ -7,10 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-    "dependencies": {
+  "dependencies": {
+    "@vue/cli-service": "~5.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "@vue/cli-service": "~5.0.0"
+    "vue3-google-signin": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
