--- a/sigurdurteiturVue/package.json
+++ b/sigurdurteiturVue/package.json
@@ -11,7 +11,7 @@
     "@vue/cli-service": "~5.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue3-google-signin": "^2.1.1"
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
